# HiPassux

./: .env  .gitignore  README.md  Readme.md  check_conection.py  main.py  run.py
app/: __init__.py  config.py  forms.py  routes.py
app/controllers/: user_controller.py
app/templates/: actualizar_perfil.html  forms.html  register.html  registro.html
backend/: .env  .gitignore  Readme.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  api_routes.py  config.py  routes.py
backend/app/api/: comment_api.py  friends_api.py  message_api.py  post_api.py  reaction_api.py  user_api.py
backend/app/controllers/: comment_controllers.py  friends_controllers.py  post_controllers.py  user_controller.py
backend/app/domain/entities/: friends.py  user.py
backend/app/domain/repositories/: base_repository.py  comment_repository.py  friends_repository.py  post_repository.py  reaction_repository.py  user_repository.py
backend/app/domain/services/: comment_service.py  friends_service.py  message_service.py  post_service.py  reaction_service.py  user_service.py
backend/app/templates/: actualizar_perfil.html  login.html  register.html  solicitud_amistad.html
backend/credentials/: client_secret_301045901661-16lihng4vi0nk17ksu80ef1p8noqmljj.apps.googleusercontent.com.json
backend/migrations/versions/: 4cdaf23328ce_other_migration.py  af8376c1fbf2_inital_migrations.py
frontend/src/: Post.jsx
migrations/versions/: 1a2cf42d3ab7_initial_migration.py  29be37e1392d_initial_migration.py  59f29b9ad756_initial_migration.py  (+2 more)
tests/: test_user_api.py
(+4 files in other folders)
