[tool.poetry]
name = "passux"
version = "0.1.0"
description = "Red Social"
authors = ["RushhMax <rzavalaga@unsa.edu.pe>"]
readme = "README.md"
packages = [{ include = "app" }]  # Cambia "passux" a "app"

[tool.poetry.scripts]
flask = "flask.cli:main"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
alembic = "1.13.2"
blinker = "1.8.2"
cffi = "1.16.0"
click = "8.1.7"
cryptography = "43.0.0"
flask = "3.0.3"
flask-migrate = "4.0.7"
flask-mysqldb = "2.0.0"
flask-sqlalchemy = "3.1.1"
greenlet = "3.0.3"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
mako = "1.3.5"
markupsafe = "2.1.5"
mysqlclient = "2.2.4"
pycparser = "2.22"
pymysql = "1.1.1"
python-dotenv = "1.0.1"
sqlalchemy = "2.0.31"
typing-extensions = "4.12.2"
werkzeug = "3.0.3"
flask-jwt-extended = "^4.6.0"
flask-cors = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
